[tool.poetry]
name = "privacy_aware_parental_control"
version = "0.1.0"
description = ""
authors = ["WisamAbbasi <39978331+WisamAbbasi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
cmake = "^3.22.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
opencv-python = "3.4.11.45"
tensorflow = "2.4.0"
numpy = "1.19.2"
matplotlib = "3.3.4"
omegaconf = "2.2.2"
cmake = "3.22.5"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
coverage = {extras = ["toml"], version = "^6.4.2"}
isort = "^5.10.1"
pylint= "2.10.2"
black = "19.3b0"
dlib = "^19.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
